# AI_NewsLetter

./: .gitignore  README.md  SCALING_SOLUTIONS.md  main.py  pipeline_test.py  pyproject.toml  requirements.txt  youtube_sources.csv
Docker/: docker-compose.yml
Notebooks/: main.ipynb  transcript_fetcher.ipynb
Tests/: Ollama_Test.py
deprecated/: source_tracker.py  youtube_pipeline.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  VERIFICATION.md  architecture_reference.md  mitigation_strategies.md  pipeline_code_analysis.md  youtube_pipeline_explanation.md
scripts/: backfill_names.py
src/: __init__.py
src/app/: main.py
src/config/: config.yaml  settings.py
src/database/: core.py  crud.py  models.py
src/models/: __init__.py  groq_news_writer.py  llm_writer.py  source_tracker.py  transcript_fetcher.py  youtube_finder.py  yt_channel_resolver.py
src/pipelines/: __init__.py  youtube_pipeline.py
src/schemas/: youtube.py
src/services/: __init__.py  channel_manager.py  feed_manager.py  llm_writer.py  transcript_fetcher.py  yt_channel_resolver.py
src/utils/: __init__.py  json_builder.py  logger.py  text_cleaner.py
tests/: __init__.py  test_youtube_finder.py  test_youtube_sources.csv
